(lang dune 3.14)

(name ledger)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "luna")

(package
 (name ledger)
 (synopsis "A pet project to track money transactions")
 (depends ocaml dune)
 )

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
